Correccion de errores
